[gd_scene load_steps=3 format=2]

[ext_resource path="res://addons/wakatime/api_key_modal.gd" type="Script" id=1]

[sub_resource type="Theme" id=1]


[node name="api_key_modal" type="PopupPanel" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 271.0
margin_top = 243.0
margin_right = 753.0
margin_bottom = 368.0
rect_min_size = Vector2( 0, 125 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
popup_exclusive = false
script = ExtResource( 1 )
_sections_unfolded = [ "Margin", "Popup", "Rect", "Theme" ]

[node name="vbox_container" type="VBoxContainer" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 25.0
margin_top = 25.0
margin_right = -25.0
margin_bottom = -25.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/separation = 25
alignment = 1
_sections_unfolded = [ "Margin", "custom_constants" ]

[node name="hbox_container_top" type="HBoxContainer" parent="vbox_container" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 432.0
margin_bottom = 25.0
rect_min_size = Vector2( 0, 25 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/separation = 5
alignment = 1
_sections_unfolded = [ "Anchor", "Margin", "Rect", "custom_constants" ]

[node name="line_edit" type="LineEdit" parent="vbox_container/hbox_container_top" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 367.0
margin_bottom = 25.0
rect_min_size = Vector2( 200, 25 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 1
size_flags_horizontal = 3
size_flags_vertical = 1
secret = true
focus_mode = 2
context_menu_enabled = true
placeholder_text = "Enter your Wakatime API Key"
placeholder_alpha = 0.6
caret_blink = false
caret_blink_speed = 0.65
caret_position = 0
_sections_unfolded = [ "Anchor", "Grow Direction", "Margin", "Placeholder", "Rect", "Size Flags", "Visibility" ]

[node name="show_btn" type="Button" parent="vbox_container/hbox_container_top" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 372.0
margin_right = 432.0
margin_bottom = 25.0
rect_min_size = Vector2( 60, 25 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Show"
flat = false
align = 1
_sections_unfolded = [ "Rect" ]

[node name="hbox_container_bottom" type="HBoxContainer" parent="vbox_container" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 50.0
margin_right = 432.0
margin_bottom = 75.0
rect_min_size = Vector2( 0, 25 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/separation = 25
alignment = 1
_sections_unfolded = [ "Anchor", "Margin", "Rect", "custom_constants" ]

[node name="save_btn" type="Button" parent="vbox_container/hbox_container_bottom" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 78.0
margin_right = 203.0
margin_bottom = 25.0
rect_min_size = Vector2( 125, 0 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Ok"
flat = false
align = 1
_sections_unfolded = [ "Anchor", "Grow Direction", "Margin", "Rect", "Size Flags" ]

[node name="cancel_btn" type="Button" parent="vbox_container/hbox_container_bottom" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 228.0
margin_right = 353.0
margin_bottom = 25.0
rect_min_size = Vector2( 125, 0 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Cancel"
flat = false
align = 1
_sections_unfolded = [ "Anchor", "Margin", "Mouse", "Rect", "Size Flags" ]

[node name="Panel" type="Panel" parent="." index="1"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 480.0
margin_bottom = 111.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
theme = SubResource( 1 )
_sections_unfolded = [ "Theme" ]


